--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,9 @@
 * {
   text-align: center;
 }
+
+main {
+  background-image: url('icon.jpg');
+  background-color: rgba(255, 255, 255, 0.8);
+  background-blend-mode: lighten;
+}
