--- a/app/global.css
+++ b/app/global.css
@@ -6,4 +6,17 @@ main {
   background-image: url('icon.jpg');
   background-color: rgba(255, 255, 255, 0.8);
   background-blend-mode: lighten;
+  background-size: 100%;
+}
+
+@media screen and (min-width: 600px) {
+  main {
+    background-size: 50%;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  main {
+    background-size: 33%;
+  }
 }
